--- a/hospice&euthanasia.html
+++ b/hospice&euthanasia.html
@@ -10,7 +10,7 @@
       href="./assetes/img/png/favicon.ico"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="./assest/style/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -60,10 +60,11 @@
               >PATIENT PORTAL</a
             >
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
           <!-- Button to Open Sidebar -->
           <button
@@ -125,10 +126,11 @@
                   >
                   <div>
                     <a
-                      class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient rounded-[27px] btn-hover duration-300"
+                      class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                       href="#"
-                      >BOOK NOW</a
                     >
+                      <span class="btn__text">BOOK NOW</span>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -168,10 +170,11 @@
               your pet during their last days and final moments.
             </p>
             <a
-              class="roboto text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient-to-r from-[#FFA280] to-[#8FD9D9] rounded-[27px] hover:scale-[1.03] duration-200"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
         </div>
       </div>
@@ -322,10 +325,11 @@
               shining smile at a time.
             </p>
             <a
-              class="roboto text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient-to-r from-[#FFA280] to-[#8FD9D9] rounded-[27px] hover:scale-[1.03] duration-200"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
         </div>
       </div>
