--- a/sevices.html
+++ b/sevices.html
@@ -66,10 +66,11 @@
               >PATIENT PORTAL</a
             >
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
           <!-- Button to Open Sidebar -->
           <button
@@ -131,10 +132,11 @@
                   >
                   <div>
                     <a
-                      class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient rounded-[27px] btn-hover duration-300"
+                      class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                       href="#"
-                      >BOOK NOW</a
                     >
+                      <span class="btn__text">BOOK NOW</span>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -167,10 +169,11 @@
               quality veterinary services under one roof.
             </p>
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
         </div>
       </div>
@@ -323,12 +326,12 @@
                   problems at their earliest stages.
                 </p>
                 <div class="">
-                  <button
-                    class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD] hidden md:block"
+                  <a
+                    class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                     href="#"
                   >
-                    BOOK NOW
-                  </button>
+                    <span class="btn__text">BOOK NOW</span>
+                  </a>
                 </div>
               </div>
             </div>
@@ -354,10 +357,11 @@
                   requires.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./animalhealth.html"
-                  >LEARN MORE</a
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
               <div
                 class="pt-[31px] pb-[47px] md:pb-[70px] border-solid border-black border-b-[1px] border-t-[1px]"
@@ -376,10 +380,11 @@
                   need.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./vaccination.html"
-                  >LEARN MORE</a
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
               <div
                 class="pt-[31px] pb-[47px] md:pb-[70px] border-solid border-black border-b-[1px]"
@@ -399,10 +404,11 @@
                   extractions and any other care your pet may need.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./dental.html"
-                  >LEARN MORE</a
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
             </div>
           </div>
@@ -441,12 +447,12 @@
                   resources to provide accurate diagnoses and effective
                   treatments.
                 </p>
-                <button
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD] hidden md:block"
+                <a
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="#"
                 >
-                  BOOK NOW
-                </button>
+                  <span class="btn__text">BOOK NOW</span>
+                </a>
               </div>
             </div>
           </div>
@@ -469,10 +475,11 @@
                   treatment.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./emergencycare.html"
-                  >LEARN MORE</a
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
               <div
                 class="pt-[31px] pb-[47px] md:pb-[70px] border-solid border-black border-b-[1px] border-t-[1px]"
@@ -489,10 +496,11 @@
                   pet without leaving the home
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
-                  href="telemedicine.html"
-                  >LEARN MORE</a
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  href="./telemedicine.html"
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
               <div
                 class="pt-[31px] pb-[47px] md:pb-[70px] border-solid border-black border-b-[1px]"
@@ -513,10 +521,11 @@
                   experts.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./diagnostics.html"
-                  >LEARN MORE</a
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
               <div
                 class="pt-[31px] pb-[47px] md:pb-[70px] border-solid border-black border-b-[1px]"
@@ -535,10 +544,11 @@
                   pharmacy can have it delivered to you within 24 hours.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
-                  href="pharmacy.html"
-                  >LEARN MORE</a
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  href="./pharmacy.html"
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
             </div>
           </div>
@@ -575,12 +585,12 @@
                   procedures like neuters. Our team of skilled veterinarians is
                   committed to providing the highest level of care to your pets.
                 </p>
-                <button
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD] hidden md:block"
+                <a
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="#"
                 >
-                  BOOK NOW
-                </button>
+                  <span class="btn__text">BOOK NOW</span>
+                </a>
               </div>
             </div>
           </div>
@@ -605,10 +615,11 @@
                   receiving a request!
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./surgery.html"
-                  >LEARN MORE</a
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
               <div
                 class="pt-[31px] pb-[47px] md:pb-[70px] border-solid border-black border-b-[1px] border-t-[1px]"
@@ -628,10 +639,11 @@
                   beloved pets
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./Spay&Neuter.html"
-                  >LEARN MORE</a
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
             </div>
           </div>
@@ -669,12 +681,12 @@
                   Trust our experienced team for exceptional care tailored to
                   your pet's unique needs.
                 </p>
-                <button
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD] hidden md:block"
+                <a
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="#"
                 >
-                  BOOK NOW
-                </button>
+                  <span class="btn__text">BOOK NOW</span>
+                </a>
               </div>
             </div>
           </div>
@@ -697,10 +709,11 @@
                   travels –the process is simple and easy.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./travel.html"
-                  >LEARN MORE</a
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
               <div
                 class="pt-[31px] pb-[47px] md:pb-[70px] border-solid border-black border-b-[1px] border-t-[1px]"
@@ -724,10 +737,11 @@
                   address the underlying cause of their discomfort.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./skin&dermatology.html"
-                  >LEARN MORE</a
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
               <div
                 class="pt-[31px] pb-[47px] md:pb-[70px] border-solid border-black border-b-[1px]"
@@ -746,10 +760,11 @@
                   completely safe procedure typically takes only a few minutes.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
-                  href="microchiping.html"
-                  >LEARN MORE</a
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  href="./microchiping.html"
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
               <div
                 class="pt-[31px] pb-[47px] md:pb-[70px] border-solid border-black border-b-[1px]"
@@ -768,10 +783,11 @@
                   well-being of your beloved pets.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./lasertheropy.html"
-                  >LEARN MORE</a
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
               <div
                 class="pt-[31px] pb-[47px] md:pb-[70px] border-solid border-black border-b-[1px]"
@@ -790,10 +806,11 @@
                   perform end-of-life services at the time of your choosing..
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./hospice&euthanasia.html"
-                  >LEARN MORE</a
                 >
+                  <span class="btn__text">LEARN MORE</span>
+                </a>
               </div>
             </div>
           </div>
@@ -831,10 +848,11 @@
               support, ensuring a healthier and happier life for them.
             </p>
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
         </div>
       </div>
