--- a/telemedicine.html
+++ b/telemedicine.html
@@ -60,10 +60,11 @@
               >PATIENT PORTAL</a
             >
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
           <!-- Button to Open Sidebar -->
           <button
@@ -125,10 +126,11 @@
                   >
                   <div>
                     <a
-                      class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient rounded-[27px] btn-hover duration-300"
+                      class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                       href="#"
-                      >BOOK NOW</a
                     >
+                      <span class="btn__text">BOOK NOW</span>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -169,10 +171,11 @@
               concerns without the need to physically visit our clinic.
             </p>
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
         </div>
       </div>
@@ -327,10 +330,11 @@
       </div>
       <div class="flex justify-center pb-15 md:pb-20">
         <a
-          class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+          class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
           href="#"
-          >CHAT WITH A VET</a
         >
+          <span class="btn__text">CHAT WITH A VET</span>
+        </a>
       </div>
     </section>
     <!-- forward to seeing -->
@@ -357,10 +361,11 @@
               We look forward to seeing you and your pet soon!
             </p>
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
         </div>
       </div>
