--- a/vaccination.html
+++ b/vaccination.html
@@ -74,10 +74,11 @@
               >PATIENT PORTAL</a
             >
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
           <!-- Button to Open Sidebar -->
           <button
@@ -139,10 +140,11 @@
                   >
                   <div>
                     <a
-                      class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+                      class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                       href="#"
-                      >BOOK NOW</a
                     >
+                      <span class="btn__text">BOOK NOW</span>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -184,10 +186,11 @@
               only dogs and cats but also rabbits and ferrets.
             </p>
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] z-[11111111] bg-gradient-to-r from-[#FFA280] to-[#8FD9D9] border border-gradient-to-r to-[#8FD9D9] from-[#FFA280] hover:bg-gradient-to-r-transparent rounded-[27px] hover:shadow-xl duration-200"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
         </div>
       </div>
@@ -646,10 +649,11 @@
               one check-up at a time.
             </p>
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
         </div>
       </div>
