--- a/animalhealth.html
+++ b/animalhealth.html
@@ -60,10 +60,11 @@
               >PATIENT PORTAL</a
             >
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
           <!-- Button to Open Sidebar -->
           <button
@@ -125,10 +126,11 @@
                   >
                   <div>
                     <a
-                      class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient rounded-[27px] btn-hover duration-300"
+                      class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                       href="#"
-                      >BOOK NOW</a
                     >
+                      <span class="btn__text">BOOK NOW</span>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -171,10 +173,11 @@
               for your pet's health or to determine if any vaccinations are due.
             </p>
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
         </div>
       </div>
@@ -789,10 +792,11 @@
               one check-up at a time.
             </p>
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 hover:shadow-xl hover:text-[#D7D9DD]"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
-              >BOOK NOW</a
             >
+              <span class="btn__text">BOOK NOW</span>
+            </a>
           </div>
         </div>
       </div>
